# crawl-ai

./: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/contents/: page.tsx
frontend/app/keywords/: page.tsx
frontend/app/sources/: page.tsx
frontend/components/: KeywordCloud.tsx  RecentContents.tsx  Sidebar.tsx  StatsCard.tsx
scripts/: init_db.py  run_bot.py  run_crawl.py  test_crawl_live.py
src/: __init__.py
src/api/: main.py
src/api/routes/: contents.py  health.py  keywords.py  reports.py  schedules.py  sources.py
src/bot/: __init__.py  slack_bot.py
src/core/: __init__.py  ai_orchestrator.py  config.py  database.py  models.py
src/crawlers/: __init__.py  base.py
src/crawlers/bidding/: __init__.py  g2b_crawler.py
src/crawlers/github/: __init__.py  trending_crawler.py
src/crawlers/news/: __init__.py  rss_crawler.py  web_crawler.py
src/crawlers/youtube/: __init__.py  channel_crawler.py
src/keywords/: __init__.py
src/notifications/: __init__.py  email.py  manager.py  slack.py  webhook.py
src/processors/: __init__.py  ai_processor.py  keyword_matcher.py  report_generator.py
src/scheduler/: __init__.py  celery_app.py  tasks.py
tests/: test_keyword_matcher.py  test_rss_crawler.py
